--- a/stilus.css
+++ b/stilus.css
@@ -1,36 +1,62 @@
+a:link {
+  color: white;
+}
+a:visited {
+  color: white;
+}
+a:active {
+  color: white;
+}
+a {
+  text-decoration: none;
+}
 
-a:link    { color: white; }
-a:visited { color:  white; }
-a:active  { color:  white; }
-a {text-decoration: none;}
+.cim {
+  font-family:
+    Times New Roman,
+    verdana;
+  font-size: 29px;
+  color: #b7b459;
+  font-weight: bold;
+}
 
-.cim
-{font-family:Times New Roman, verdana;
-font-size:29;
-color:B7B459;
-font-weight:bold;}
+.halovany {
+  font-family:
+    Times New Roman,
+    verdana;
+  font-size: 19px;
+  color: #838a7c;
+}
 
-.halovany
-{font-family:Times New Roman, verdana;
-font-size:19;
-color:838A7C;}
+.sarok {
+  font-family:
+    Times New Roman,
+    verdana;
+  font-size: 14px;
+  color: #b7b459;
+}
 
-.sarok
-{font-family:Times New Roman, verdana;
-font-size:14;
-color:B7B459;}
+.megn {
+  font-family:
+    Times New Roman,
+    verdana;
+  font-size: 11px;
+  color: #838a7c;
+}
 
-.megn
-{font-family:Times New Roman, verdana;
-font-size:11;
-color:838A7C;}
+.menu {
+  font-family:
+    Times New Roman,
+    verdana;
+  font-size: 17px;
+  color: white;
+}
 
-.menu
-{font-family:Times New Roman, verdana;
-font-size:17;
-color: white;}
+.alja {
+  font-family:
+    Times New Roman,
+    verdana;
+  font-size: 12px;
+  color: #3b4838;
+}
 
-.alja
-{font-family:Times New Roman, verdana;
-font-size:12;
-color:3B4838;}
