--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,10 @@
 <tr>
-	<td style="height: 40px; background-image: url('{{ "alja.jpg" | absURL }}');">
-		<table class="alja" style="width: 100%;">
-			<tr>
-				<td style="text-align: center;">Az oldal átalakítás alatt!</td>
-			</tr>
-		</table>
-	</td>
+  <td class="footer">
+    <table class="alja" style="width: 100%">
+      <tr>
+        <td style="text-align: center">Az oldal átalakítás alatt!</td>
+      </tr>
+    </table>
+  </td>
 </tr>
+
