converted to model html

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,2 @@
-{{ define "main" }}
-<div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
-	{{ .Content }}
-</div>
-{{ end }}
+{{ define "main" }} {{ .Content }} {{ end }}
+
