--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div style="display: flex; justify-content: center;">
-	<img src="{{ "szarvasok.jpg" | absURL }}" style="border: 0; width: 550px;" alt="Szarvas család">
+<div class="welcome">
+  <img src="/images/szarvasok.jpg" alt="Szarvasok" />
 </div>
 {{ end }}
