--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,31 +1,22 @@
-<tr>
-  <td>
-    <table style="width: 100%">
-      <tr>
-        <td>
-          <a href="/">
-            <div>
-              <span class="cim">Szarvas Pongrác</span><br />
-              <span class="halovany">grafikus, festő, illusztrátor</span>
-            </div>
-          </a>
-        </td>
-        <td style="text-align: right">
-          <span class="megn">Cím:</span>
-          <span class="sarok"> H-6500 Baja, Sárretelő u. 1.</span>
-          <br />
-
-          <span class="megn">Mobil:</span>
-          <span class="sarok"> 30-819-2282</span>
-          <br />
-
-          <span class="megn">E-mail:</span>
-          <span class="sarok">
-            <a href="mailto:szpongrac@gmail.com"> szpongrac@gmail.com </a>
-          </span>
-        </td>
-      </tr>
-    </table>
-  </td>
-</tr>
-
+<header>
+  <a href="/">
+    <div class="cim">Szarvas Pongrác</div>
+    <div class="halovany">grafikus, festő, illusztrátor</div>
+  </a>
+  <div class="contacts">
+    <div class="contact">
+      <span class="megn">Cím:</span>
+      <span class="sarok"> H-6500 Baja, Szüretetlő u. 1.</span>
+    </div>
+    <div class="contact">
+      <span class="megn">Mobil:</span>
+      <span class="sarok"> 30-819-2282</span>
+    </div>
+    <div class="contact">
+      <span class="megn">E-mail:</span>
+      <span class="sarok">
+        <a href="mailto:szpongrac@gmail.com"> szpongrac@gmail.com </a>
+      </span>
+    </div>
+  </div>
+</header>
