--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,19 +17,10 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
   <body>
-    <main>
-      <table class="container">
-        {{ partial "header.html" . }} {{ partial "navigation.html" . }}
-
-        <tr>
-          <td style="width: 820px; height: 100%" class="content-area">
-            {{ block "main" . }}{{ end }}
-          </td>
-        </tr>
-
-        {{ partial "footer.html" . }}
-      </table>
-    </main>
+    <div class="container">
+      {{ partial "header.html" . }} {{ partial "navigation.html" . }}
+      <main>{{ block "main" . }}{{ end }}</main>
+      {{ partial "footer.html" . }}
+    </div>
   </body>
 </html>
-
