--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,1 @@
-<tr>
-  <td class="footer">
-    <table class="alja" style="width: 100%">
-      <tr>
-        <td style="text-align: center">Az oldal átalakítás alatt!</td>
-      </tr>
-    </table>
-  </td>
-</tr>
-
+<footer>Az oldal átalakítás alatt!</footer>
